// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders default as expected 1`] = `
<div>
  <div
    class="card flex flex-col items-start transition-transform duration-200"
  >
    <div
      class="card__image-container w-full mb-4"
    >
      <img
        alt="John Doe"
        class="card__image max-w-full max-h-full object-cover rounded-lg "
        src="/images/team/member.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
    >
      <div
        class="card__text"
      >
        <p
          class="card__title bluedot-h4 mb-2"
        >
          John Doe
        </p>
        <p
          class="card__subtitle bluedot-p "
        >
          Developer
        </p>
      </div>
      <div
        class="card__bottom-section flex flex-col gap-space-between"
      >
        <a
          class="cta-button flex items-center justify-center rounded-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cursor-pointer cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
          data-rac=""
          href="https://linkedin.com/in/johndoe"
          tabindex="0"
        >
          <span
            class="cta-button__text"
          >
            LinkedIn
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > renders with isEntireCardClickable as expected 1`] = `
<div>
  <a
    class="card flex flex-col items-start transition-transform duration-200 hover:scale-[1.01]"
    href="https://linkedin.com/in/johndoe"
  >
    <div
      class="card__image-container w-full mb-4"
    >
      <img
        alt="John Doe"
        class="card__image max-w-full max-h-full object-cover rounded-lg "
        src="/images/team/member.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
    >
      <div
        class="card__text"
      >
        <p
          class="card__title bluedot-h4 mb-2"
        >
          John Doe
        </p>
        <p
          class="card__subtitle bluedot-p "
        >
          Developer
        </p>
      </div>
    </div>
  </a>
</div>
`;
